--- a/modal.html
+++ b/modal.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="modal.css" />
+
     <title></title>
   </head>
-  <body>
 
-    <button class="trigger">Click here to trigger the modal!</button>
-    <div class="modal">
-        <div class="modal-content">
-            <span class="close-button">×</span>
-            <h1>Hello, I am a modal!</h1>
-        </div>
+
+  <!-- Trigger/Open The Modal -->
+  <button id="modalBtn">tweet1</button>
+
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="modalclose">&times;</span>
+
+      </div>
+      <div class="modal-body">
+        <p>trop de tweet, deconnecte toi !!!!</p>
+
+      </div>
+      <div class="modal-footer">
+
+      </div>
     </div>
+  </div>
 
+
+<script type="text/javascript" src="modal.js"></script>
  </body>
 </html>
